fix: update placeholder text

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
         // Set the language labels
         elWordsLabel.text(labels.yourText);
+        elWords.attr('placeholder', labels.yourText);
         elPaceLabel.text(labels.yourPace);
         elCountLabel.text(labels.words);
         elDurationLabel.text(labels.duration);
