--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         en: {
             labels: {
                 yourText: 'Your text:',
+                yourTextPlaceholder: 'Your text',
                 yourPace: 'Your pace:',
                 words: 'Words:',
                 duration: 'Duration:',
@@ -99,6 +100,7 @@
         nl: {
             labels: {
                 yourText: 'Je tekst:',
+                yourTextPlaceholder: 'Je tekst',
                 yourPace: 'Je snelheid:',
                 words: 'Woorden:',
                 duration: 'Duur:',
@@ -112,6 +114,7 @@
         pt: {
             labels: {
                 yourText: 'Seu texto:',
+                yourTextPlaceholder: 'Seu texto',
                 yourPace: 'Seu ritmo:',
                 words: 'Palavras:',
                 duration: 'Duração:',
@@ -159,7 +162,7 @@
 
         // Set the language labels
         elWordsLabel.text(labels.yourText);
-        elWords.attr('placeholder', labels.yourText);
+        elWords.attr('placeholder', labels.yourTextPlaceholder);
         elPaceLabel.text(labels.yourPace);
         elCountLabel.text(labels.words);
         elDurationLabel.text(labels.duration);
